fix scrollbar on mobile screens

--- a/assets/css/promo.css
+++ b/assets/css/promo.css
@@ -161,4 +161,15 @@ svg {
   .left {
     margin-bottom: 40px;
   }
+
+  .links-section {
+    overflow-y: hidden;
+    overflow-x: hidden;
+    max-height: 100%;
+  }
+
+  .link-btn,
+  .links-section a {
+    width: 100%;
+  }
 }
